--- a/Nepal_website/index.html
+++ b/Nepal_website/index.html
@@ -20,13 +20,13 @@
         </div>
 
         <div class="introduction">
-            <p>Nepal, a landlocked country in South Asia, is a multi-ethnic, multi-lingual,
+            <p> Nepal, a landlocked country in South Asia, is a multi-ethnic, multi-lingual,
                 multi-cultural, and
                 multi-religious state. It includes diverse geographical structures, fertile plains, forested hills, and
                 eight out of the world's ten tallest mountains, including Mount Everest, with 8,848.86 meters being the
                 highest on Earth. It is classified into three physical physiographic regions known as Himal, Pahad, and
-                Terai.
-            </p>
+                Terai.</p>
+
         </div>
 
         <section>
@@ -37,7 +37,7 @@
                     <img src="images/himalaya.jpg" alt="Himalaya Region">
                 </div>
                 <div class="region_description">
-                    <h1> Himalayan Region</h1>
+                    <h2> Himalayan Region</h2>
                     <p>This region covers the northern part of Nepal and includes the highest elevations above 8000
                         peaks, such as Mount Everest, Lhotse, Makalu, Dhaulagiri, Annapurna, and Manasalu. The most
                         significant feature of the Himalayas is their heights, topography, complex geographical
@@ -48,7 +48,7 @@
             <!-- Reference :https://pixabay.com/photos/rice-plantation-thailand-rice-1822444/ -->
             <div class="regions_container">
                 <div class="region_description">
-                    <h1> Hilly Region</h1>
+                    <h2> Hilly Region</h2>
                     <p>This region occupies the southern part of the Mountain region (called Pahad in Nepali) with
                         around 1,000 and 4,000 meters altitude. It consists of the Mahabharat range and the Churia
                         Hills. One of the significant features includes Kathmandu valley, the capital city of Nepal,
@@ -66,7 +66,7 @@
                     <img src="images/terai.jpg" alt="Terai Region">
                 </div>
                 <div class="region_description">
-                    <h1> Terai Region</h1>
+                    <h2> Terai Region</h2>
                     <p>This region is often known as the granary of Nepal because of its ability to cultivate and
                         generate food products such as paddy, wheat, pulses, moong, sugarcane, jute, tobacco, and maize.
                         Significantly, it consists of plenty of fertile lands, alluvial soil, and water suitable for
@@ -135,7 +135,7 @@
 
     <hr>
     <footer>
-        <p> Find us on:</p>
+        <h2> Find us on:</h2>
         <div class="footer">
             <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">
                 Facebook icons created by Freepik - Flaticon</a> -->
@@ -150,7 +150,7 @@
 
         <hr>
         <div>
-            <p>References:</p>
+            <h2>References:</h2>
             <ul>
                 <a href="https://pixabay.com" target="_blank">
                     https://pixabay.com
@@ -161,5 +161,4 @@
         </div>
     </footer>
 </body>
-
 </html>
