--- a/ggarden1.2/plants.html
+++ b/ggarden1.2/plants.html
@@ -23,8 +23,9 @@
     </nav>
     <main>
         <h2>Plants</h2>
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
-            at its layout.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur culpa, porro maiores earum nostrum
+            officiis quia? Corporis dolores, voluptas consequatur quod neque, mollitia aliquam, sed omnis aperiam
+            sapiente assumenda qui.</p>
         <br><br><br>
         <dl>
             <dt><strong>Vines </strong></dt>
