--- a/ggarden1.2/index.html
+++ b/ggarden1.2/index.html
@@ -23,12 +23,9 @@
     </nav>
     <main>
         <h2> Welcome to Gabriel Green Garden House</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum officiis quas ex? Placeat praesentium
+            ipsam non esse consequatur doloremque consectetur, alias debitis voluptas, nemo quos suscipit asperiores
+            ducimus harum.</p>
         <ul>
             <li>Garden center</li>
             <li>Landscape & gardening ideas</li>
