--- a/ggarden1.2/index.html
+++ b/ggarden1.2/index.html
@@ -25,16 +25,18 @@
         <h2> Welcome to Gabriel Green Garden House</h2>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum officiis quas ex? Placeat praesentium
             ipsam non esse consequatur doloremque consectetur, alias debitis voluptas, nemo quos suscipit asperiores
-            ducimus harum.</p>
+            ducimus harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni quasi velit dicta
+            facere, alias tenetur recusandae perspiciatis reprehenderit temporibus? Et sequi illum autem dolor repellat
+            a perspiciatis amet odio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero inventore corrupti
+            adipisci, delectus eaque voluptas, aspernatur ipsum praesentium magnam illo numquam, fuga dolores mollitia
+            nostrum veniam animi nesciunt eum odio!</p>
         <ul>
             <li>Garden center</li>
             <li>Landscape & gardening ideas</li>
             <li>Grow indoor & outdoor plants</li>
             <li>Planters</li>
         </ul>
-        <br>
-        <br>
-        <br>
+       
         <address>
             <h3>Address</h3>
             299 Doon Valley Drive <br> Kitchener, Ontario N2G 4M4, Canada <br> Phone: 519-777-5220 <br>
