--- a/ggarden1.2/plants.html
+++ b/ggarden1.2/plants.html
@@ -25,7 +25,12 @@
         <h2>Plants</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur culpa, porro maiores earum nostrum
             officiis quia? Corporis dolores, voluptas consequatur quod neque, mollitia aliquam, sed omnis aperiam
-            sapiente assumenda qui.</p>
+            sapiente assumenda qui. lor. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id exercitationem
+            adipisci soluta nihil sequi esse, vero, natus dolores commodi magnam ducimus quo omnis sit autem minus in
+            reprehenderit necessitatibus recusandae? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ad
+            autem, amet, ipsam placeat esse earum alias
+            officiis animi ab error possimus, dicta consectetur! Laborum expedita fugiat exercitationem debitis ratione?
+        </p>
         <br><br><br>
         <dl>
             <dt><strong>Vines </strong></dt>
@@ -37,7 +42,7 @@
             <dd>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </dd>
 
-            <dt><strong>Shrubs</strong> </dt>
+            <dt><strong>Flowering Shrubs</strong> </dt>
             <dd>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </dd>
 
@@ -45,8 +50,7 @@
             <dd>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </dd>
         </dl>
-        <br> <br><br>
-
+        <br> <br>
     </main>
     <footer>
         <div>
